--- a/templates/subject/subject.html
+++ b/templates/subject/subject.html
@@ -3,54 +3,63 @@
 {% block head %}
     <style>
         .info {
-            padding-top: 20px;
+            padding: 20px;
+{#            background-color: #fafafa;#}
+{#            border: 1px solid #ddd;#}
+        }
+
+        dd.name {
+            font-size: 150%;
+            font-weight: bold;
+        }
+
+        dd {
+            padding: 5px 2px;
+            margin: 0;
         }
     </style>
 
 {% endblock %}
 {% block title %}{% block top-title %}{{ subject.name }}{% endblock %}{% endblock %}
 {% block content %}
-    <div class="info">
-        <div class="mdui-table-fluid ">
-            <table class="mdui-table">
-                <thead>
-                </thead>
-                <tbody>
-                <tr>
-                    <td rowspan="100" width="300">
-                        <div class="mdui-grid-tile">
-                            <img class="mdui-img-rounded mdui-shadow-4"
-                                                        src="{{ subject.cover }}"/>
-                        </div>
-                    </td>
-                    <td>{{ subject.name }}</td>
+    <div class="info mdui-shadow-1 mdui-color-theme-50">
+        <div class="mdui-row">
+            <div class="mdui-col-xs-12 mdui-col-sm-4 mdui-col-md-4 mdui-col-lg-3 mdui-col-xl-3">
+                <div class="mdui-grid-tile mdui-shadow-4 mdui-color-white" style="padding: 10px;">
+                    <img class="mdui-img-rounded" src="{{ subject.cover }}"/>
+                </div>
+            </div>
+            <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-6 mdui-col-lg-9 mdui-col-xl-9">
 
-                </tr>
-                <tr>
-                    <td>{{ subject.category.name }}</td>
-                </tr>
-                </tbody>
-            </table>
+                <div class="">
+                    <dl>
+                        <dd class="name"> {{ subject.name }}</dd>
+                        <dd><b>状态：</b>{{ subject.get_state_display }}</dd>
+                        <dd>
+                            <b>标签：</b>{{ subject.tags }}
+                        </dd>
+                        <dd><b>导演：</b>{{ subject.director }}
+                        </dd>
+                        <dd><b>地区：</b>{{ subject.area }}</dd>
+                        <dd><b>年代：</b>{{ subject.pub_date | date:'Y' }}</dd>
+                        <dd><b>主演：</b>{{ subject.actress }}
+                        </dd>
+                        <dd class="desd">
+                            <div class="alldes sdes cur">
+                                <div class="des2"><b>剧情：</b>
+                                    <span>{{ subject.desc }}</span>
+                                </div>
+                            </div>
+                        </dd>
+                    </dl>
+                </div>
+            </div>
         </div>
     </div>
 
-    {% for line in lines %}
-
-        <div class="mdui-typo">
-            <h2>{{ line.name }}</h2>
-            <hr/>
-        </div>
-        <div class="mdui-row">
-            {% for video in line.videos %}
-
-                <div class="mdui-col-xs-2 mdui-col-sm-2 mdui-col-md-2 mdui-col-lg-1 mdui-col-xl-1">
-                    <a class="mdui-btn mdui-btn-raised mdui-ripple" href="{% url 'play' video.id %}">{{ video.name }}</a>
-                </div>
-            {% endfor %}
-        </div>
-
-    {% endfor %}
-
+    <div class="lines mdui-shadow-1 mdui-color-theme-50">
+        {% include 'line/line.html' %}
+    </div>
 
 
 {% endblock %}
